syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example";
option java_outer_classname = "GrpcDemoServer";
option objc_class_prefix = "HLW";

package com.example;

service GrpcDemoServerService {
  rpc saveUser (SaveUserRequest) returns (UserResponse) {}
  rpc saveUserStream (stream SaveUserRequest) returns (stream UserResponse) {}
}

message SaveUserRequest {
  string name = 1;
  string lastName = 2;
  string document = 3;

}

message UserResponse {
  int32 id = 1;
  string name = 2;
  string lastName = 3;
}